--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -17,12 +17,12 @@ http {
 	server {
 		# listen                  80;
 		listen                  443 ssl;
-		root                    /www;
-		index                   index.html;
+		root                    /www/wordpress;
+		index                   index.html index.php;
 		server_name             localhost;
 		client_max_body_size    32m;
-		ssl_certificate			/etc/ssl/certs/nginx-selfsigned.crt;
-		ssl_certificate_key		/etc/ssl/private/nginx-selfsigned.key;
+		ssl_certificate			/etc/ssl/certs/nginx_selfsigned.crt;
+		ssl_certificate_key		/etc/ssl/private/nginx_selfsigned.key;
 		ssl_protocols           TLSv1.2 TLSv1.3;
 		error_page              500 502 503 504  /50x.html;
 		location / {
