--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -5,12 +5,20 @@ services:
     image: nginx
     ports:
       - "443:443"
+    networks:
+      - backend
+    volumes:
+      - wp:/www/wordpress
+    depends_on:
+      - wordpress
 
   mariadb:
     build: ./requirements/mariadb/
     image: mariadb
     ports:
       - "3306:3306"
+    networks:
+      - backend
     volumes:
       - db:/var/lib/mysql
 
@@ -19,6 +27,8 @@ services:
     image: wordpress
     ports:
       - "9000:9000"
+    networks:
+      - backend
     volumes:
       - wp:/www/wordpress
     depends_on:
@@ -37,3 +47,7 @@ volumes:
       type: none
       device: /home/abdel-ke/data/WordPress
       o: bind
+
+networks:
+  backend:
+    driver: bridge
