--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -24,12 +24,17 @@ http {
 		ssl_certificate			/etc/ssl/certs/nginx_selfsigned.crt;
 		ssl_certificate_key		/etc/ssl/private/nginx_selfsigned.key;
 		ssl_protocols           TLSv1.2 TLSv1.3;
-		error_page              500 502 503 504  /50x.html;
 		location / {
             try_files $uri $uri/ =404;
         }
 		location = /50x.html {
 			  root              /var/lib/nginx/html;
 		}
+		location ~ \.php$ {
+                fastcgi_pass   wordpress:9000;
+                fastcgi_index  index.php;
+                fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+                include fastcgi_params;
+        }
 	}
 }
