--- a/srcs/requirements/wordpress/dockerfile
+++ b/srcs/requirements/wordpress/dockerfile
@@ -10,7 +10,10 @@ RUN apk add php7-gd php7-mysqli php7-zlib php7-curl
 RUN apk add php7-gd php7-mysqli php7-zlib php7-curl php7-redis
 
 RUN mkdir -p /www
-RUN wget http://wordpress.org/latest.tar.gz
-RUN tar -xzvf latest.tar.gz && rm latest.tar.gz
-RUN mv wordpress /www/
+RUN cd /www && wget http://wordpress.org/latest.tar.gz && tar -xzvf latest.tar.gz && rm latest.tar.gz
 
+RUN sed -i 's/listen = 127.0.0.1:9000/listen = 0.0.0.0:9000/' /etc/php7/php-fpm.d/www.conf
+RUN sed -i 's/user = nobody/user = root/g'  /etc/php7/php-fpm.d/www.conf
+RUN sed -i 's/group = root/group = root/g'  /etc/php7/php-fpm.d/www.conf
+
+CMD ./usr/sbin/php-fpm7 -F -R
