--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -3,6 +3,7 @@ services:
   nginx:
     build: ./requirements/nginx/
     image: nginx
+    container_name: nginx
     ports:
       - "443:443"
     networks:
@@ -15,16 +16,20 @@ services:
   mariadb:
     build: ./requirements/mariadb/
     image: mariadb
+    container_name: mariadb
     ports:
       - "3306:3306"
     networks:
       - backend
     volumes:
       - db:/var/lib/mysql
+    env_file:
+      - .env
 
   wordpress:
     build: ./requirements/wordpress/
     image: wordpress
+    container_name: wordpress
     ports:
       - "9000:9000"
     networks:
@@ -33,7 +38,9 @@ services:
       - wp:/www/wordpress
     depends_on:
       - mariadb
-    
+    env_file:
+      - .env
+
 volumes:
   db:
     driver: local
