--- a/srcs/requirements/wordpress/dockerfile
+++ b/srcs/requirements/wordpress/dockerfile
@@ -12,6 +12,8 @@ RUN apk add php7-gd php7-mysqli php7-zlib php7-curl php7-redis
 RUN mkdir -p /www
 RUN cd /www && wget http://wordpress.org/latest.tar.gz && tar -xzvf latest.tar.gz && rm latest.tar.gz
 
+COPY ./wp-config.php /www/wordpress/wp-config.php
+
 RUN sed -i 's/listen = 127.0.0.1:9000/listen = 0.0.0.0:9000/' /etc/php7/php-fpm.d/www.conf
 RUN sed -i 's/user = nobody/user = root/g'  /etc/php7/php-fpm.d/www.conf
 RUN sed -i 's/group = root/group = root/g'  /etc/php7/php-fpm.d/www.conf
