--- a/srcs/.env
+++ b/srcs/.env
@@ -1,6 +1,8 @@
 DOMAIN_NAME=abdel-ke.42.fr
 
 # MYSQL SETUP
+MYSQL_ROOT=root
 MYSQL_ROOT_PASSWORD=' '
-MYSQL_USER=abdel-ke
-MYSQL_PASSWORD=1337@kh
+DATABASE_NAME=wordpress
+DATABASE_USER=abdel-ke
+DATABASE_USER_PASS=1337@kh
