--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,9 +1,9 @@
 FROM alpine:3.14.2
 
-RUN apk update && apk add openrc mariadb mariadb-client
+RUN apk update && apk add openrc mariadb mariadb-client 
 RUN openrc && touch /run/openrc/softlevel
 
-COPY ./tools/script.sh .
+COPY ./tools/script.sh /
 RUN chmod +x script.sh
 
-CMD ./script.sh
+ENTRYPOINT [ "./script.sh" ]
