--- a/srcs/.env
+++ b/srcs/.env
@@ -5,4 +5,4 @@ MYSQL_ROOT=root
 MYSQL_ROOT_PASSWORD=' '
 DATABASE_NAME=wordpress
 DATABASE_USER=abdel-ke
-DATABASE_USER_PASS=1337@kh
+DB_USER_PASS=1337@kh
