--- a/srcs/requirements/wordpress/dockerfile
+++ b/srcs/requirements/wordpress/dockerfile
@@ -18,4 +18,6 @@ RUN sed -i 's/listen = 127.0.0.1:9000/listen = 0.0.0.0:9000/' /etc/php7/php-fpm.
 RUN sed -i 's/user = nobody/user = root/g'  /etc/php7/php-fpm.d/www.conf
 RUN sed -i 's/group = root/group = root/g'  /etc/php7/php-fpm.d/www.conf
 
-CMD ./usr/sbin/php-fpm7 -F -R
+COPY ./tools/script.sh /
+RUN chmod +x script.sh
+CMD ./script.sh
