--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -4,7 +4,6 @@ RUN apk update
 RUN apk add nginx openrc vim openssl
 RUN openrc
 RUN mkdir /www/
-COPY ./tools/index.html /www/
 RUN touch /run/openrc/softlevel
 COPY ./conf/nginx.conf /etc/nginx/
 COPY ./tools/nginx_selfsigned.key /etc/ssl/private/
@@ -12,4 +11,5 @@ COPY ./tools/nginx_selfsigned.crt /etc/ssl/certs/
 COPY ./tools/run.sh /
 # EXPOSE 80 443
 # RUN openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout /etc/ssl/private/nginx-selfsigned.key -out /etc/ssl/certs/nginx-selfsigned.crt -subj "/CN=localhost"
-CMD /./run.sh
+# CMD /./run.sh
+CMD ["nginx", "-g", "daemon off;"]
