--- a/srcs/.env
+++ b/srcs/.env
@@ -3,6 +3,7 @@ DOMAIN_NAME=abdel-ke.42.fr
 # MYSQL SETUP
 MYSQL_ROOT=root
 MYSQL_ROOT_PASSWORD=' '
+DB__HOST=mariadb
 DATABASE_NAME=wordpress
 DATABASE_USER=abdel-ke
 DB_USER_PASS=1337@kh
