--- a/srcs/.env
+++ b/srcs/.env
@@ -1,8 +1,10 @@
 DOMAIN_NAME=abdel-ke.42.fr
-
+# certificates
+CERTS_KEY=/etc/ssl/private/nginx-selfsigned.key
+CERTS_CRT=/etc/ssl/certs/nginx-selfsigned.crt
 # MYSQL SETUP
 MYSQL_ROOT=root
-MYSQL_ROOT_PASSWORD=' '
+MYSQL_ROOT_PASSWORD='P$EHR2aM,['
 DB__HOST=mariadb
 DATABASE_NAME=wordpress
 DATABASE_USER=abdel-ke
