--- a/srcs/requirements/bonus/adminer/dockerfile
+++ b/srcs/requirements/bonus/adminer/dockerfile
@@ -10,3 +10,4 @@ RUN mkdir -p /var/www/html/
 RUN wget "https://github.com/vrana/adminer/releases/download/v4.8.1/adminer-4.8.1.php"
 
 RUN mv adminer-4.8.1.php index.php
+CMD php -S 0.0.0.0:5000
