--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -6,3 +6,4 @@ RUN openrc && touch /run/openrc/softlevel
 RUN mkdir /www/
 COPY ./conf/nginx.conf /etc/nginx/
 RUN openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout /etc/ssl/private/nginx-selfsigned.key -out /etc/ssl/certs/nginx-selfsigned.crt -subj "/CN=localhost"
+CMD [ "nginx",  "-g", "daemon off;" ]
